--- a/profile/index.html
+++ b/profile/index.html
@@ -39,49 +39,10 @@
             class="z-50 flex flex-col absolute w-[500px] max-h-[300px] overflow-auto bg-lightGrayBlue rounded-md shadow-blue shadow-lg p-5 top-10"
           >
             <form
+              id="userProfileForm"
               name="updateProfile"
               class="w-full flex flex-col items-center gap-4"
-            >
-              <p class="text-2xl text-white font-semibold">Profile Picture</p>
-
-              <input
-                type="url"
-                name="avatarUrl"
-                class="formInputOne"
-                placeholder="Insert image url here..."
-              />
-
-              <p class="text-2xl text-white font-semibold mt-4">
-                Cover Picture
-              </p>
-
-              <input
-                type="url"
-                name="bannerUrl"
-                class="formInputOne"
-                placeholder="Insert Image Url"
-              />
-
-              <input
-                type="text"
-                name="bannerAlt"
-                class="formInputOne"
-                placeholder="Insert a description for the cover image"
-              />
-
-              <p class="text-2xl text-white font-semibold mt-4">Bio</p>
-
-              <textarea
-                type="text"
-                name="bio"
-                class="formInputTwo"
-                placeholder="Write your bio here! "
-              ></textarea>
-
-              <button class="buttonEffect text-blue text-3xl my-4 font-bold">
-                Update Profile
-              </button>
-            </form>
+            ></form>
           </div>
         </details>
         <div id="bio" class="ml-20"></div>
